--- a/index.html
+++ b/index.html
@@ -1,9 +1,97 @@
 <!DOCTYPE html>
     <html>
         <head>
-             <link rel="stylesheet"  href="css/style.css"> 
+            <link rel="stylesheet"  href="css/style.css"> 
+            <link rel="stylesheet"  href="css/font-awesome.css"> 
+            <script defer src="JavaScript/java.js"></script>
+            <meta charset="UTF-8">
+
         </head>
+
         <body>
+            <div id="partieG">
+                <img src="images/entete_opaque.png" style="width:100% ;">
+                <h3 id="LDL">Lot de livres</h3>
+                <h5 id="FDL">Filtre de lots</h5>
+                <div id="btnSection">
+                    <button class="btn" id="btn1">Lot complet de 14 articles</button>
+                    <button class="btn" id="btn2">Lot de 10 articles</button>
+                    <button class="btn" id="btn3">Lot de 5 articles</button>
+                </div>
+                <h2 id="PAM">Payez au moins de 24,37$CA pour les 14 articles</h2>
+                <div id="livreSection">
+                    <div class="livre" id="livre1">
+                        <img src="images/livres/livre01.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre1">Angular Up & Running</a>
+                    </div>
+                    <div class="livre" id="livre2">
+                        <img src="images/livres/livre02.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre2">HTML5 Hacks</a>
+                    </div>
+                    <div class="livre" id="livre3">
+                        <img src="images/livres/livre03.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre3">Data Visualization with Python & JavaScript</a>
+                    </div>
+                    <div class="livre" id="livre4">
+                        <img src="images/livres/livre04.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre4">Learning PHP, MySQL & JavaScript</a>
+                    </div>
+                    <div class="livre" id="livre5">
+                        <img src="images/livres/livre05.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre5">Flask Web Development</a>
+                    </div>
+                    <div class="livre" id="livre6">
+                        <img src="images/livres/livre06.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre6">Learning GraphQL</a>
+                    </div>
+                    <div class="livre" id="livre7">
+                        <img src="images/livres/livre07.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre7">Distributed Systems with Node.js</a>
+                    </div>
+                    <div class="livre" id="livre8">
+                        <img src="images/livres/livre08.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre8">Programming PHP</a>
+                    </div>
+                    <div class="livre" id="livre9">
+                        <img src="images/livres/livre09.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre9">Learning JavaScript</a>
+                    </div>
+                    <div class="livre" id="livre10">
+                        <img src="images/livres/livre10.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre10">Programming TypeScript</a>
+                    </div>
+                    <div class="livre" id="livre11">
+                        <img src="images/livres/livre11.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre11">Multithreaded JavaScript</a>
+                    </div>
+                    <div class="livre" id="livre12">
+                        <img src="images/livres/livre12.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre12">Effective TypeScript</a>
+                    </div>
+                    <div class="livre" id="livre13">
+                        <img src="images/livres/livre13.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre13">React Cookbook</a>
+                    </div>
+                    <div class="livre" id="livre14">
+                        <img src="images/livres/livre14.avif" style="height: 300px;width: fit-content;">
+                        <a id="livreTitre14">Learning PHP, MySQL & JavaScript</a>
+                    </div>
+                </div>
+            </div>
+            <div id="partieD">
+                <h3 id="MDA">Maitrisez le développement d'application Web</h3>
+                <p id="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Voluptatibus sequi fugit ipsum fuga et quisquam maiores, 
+                    dolores sit sint in expedita, ratione delectus? Reprehenderit, 
+                    fugit autem ut laudantium qui tenetur nostrum aliquid hic quidem. 
+                    Possimus est voluptatibus magnam quae, adipisci veritatis, 
+                    nostrum optio eius quos deserunt perferendis illo, impedit consectetur!</p>
+                <div id="texteIcone">
+                    <div></div>
+                </div>    
+
+            </div>
 
         </body>
+
     </html>
