--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <link rel="stylesheet"  href="css/style.css"> 
             <link rel="stylesheet"  href="css/font-awesome.css"> 
             <script defer src="JavaScript/java.js"></script>
+            <script src="https://kit.fontawesome.com/1d7303cdac.js" crossorigin="anonymous"></script>
             <meta charset="UTF-8">
 
         </head>
@@ -87,9 +88,27 @@
                     Possimus est voluptatibus magnam quae, adipisci veritatis, 
                     nostrum optio eius quos deserunt perferendis illo, impedit consectetur!</p>
                 <div id="texteIcone">
-                    <div></div>
-                </div>    
-
+                    <div class="group" id="money"><i class="icone fa-solid fa-dollar-sign"></i> Payez 1,35$CA ou plus</div>
+                    <div class="group" id="venteTotal"><i class="icone fa-solid fa-people-carry-box"></i> 6 534 Vendus</div>
+                    <div class="group" id="book"><i class="icone fa-solid fa-book-open"></i> Utiliser sur n'importe quel appareil</div>
+                    <div class="group" id="papier"><i class="icone fa-solid fa-file"></i> PDF, ePUB et MOBI</div>
+                </div>
+                <i id="coeur"class="fa-solid fa-heart"></i>
+                <div id="association"></i><a id="texte" class="fa-xs">Ce lot a permis de collecter 12 889$CA pour une association carritative !</a></div>    
+                <h3 id="VDP">Valeur de 808,58$CA • Payez ce que vous voulez</h3>
+                <h5 id="PMP">Payer moins pour obtenir moins d'articles, ou payez plus pour donner plus au éditeur,
+                     à Humble et aux associations carritatives</h5>
+                <div id="sectionBTN">
+                    <button class="fa-xs btn2" id="montant1">1,35$CA</button>
+                    <button class="fa-xs btn2" id="montant2">13,54$CA</button>
+                    <button class="fa-xs btn2" id="montant3">24,37$CA</button>
+                    <button class="fa-xs btn2" id="montant4">30$CA</button>
+                    <button class="fa-xs btn2" id="montant5">35$CA</button>
+                    <button class="fa-xs btn2" id="montant6">40$CA</button>
+                    <div id="ptiBoite">$CA</div>
+                    <div id="AutreMontant"></div>
+                    <button id="valid">Validation</button>
+                </div>     
             </div>
 
         </body>
