--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <h3 id="LDL">Lot de livres</h3>
                 <h5 id="FDL">Filtre de lots</h5>
                 <div id="btnSection">
-                    <button class="btn" id="btn1">Lot complet de 14 articles</button>
-                    <button class="btn" id="btn2">Lot de 10 articles</button>
-                    <button class="btn" id="btn3">Lot de 5 articles</button>
+                    <button onclick="lotAll()" class="btn" id="btn1">Lot complet de 14 articles</button>
+                    <button onclick="lot10()" class="btn" id="btn2">Lot de 10 articles</button>
+                    <button onclick="lot5()" class="btn" id="btn3">Lot de 5 articles</button>
                 </div>
-                <h2 id="PAM">Payez au moins de 24,37$CA pour les 14 articles</h2>
+                <h2 id="PAM"></h2>
                 <div id="livreSection">
                     <div class="livre" id="livre1">
                         <img src="images/livres/livre01.avif" style="height: 300px;width: fit-content;">
